POSITION_INDEPENDENT_CODE: Manage link flags for executables

Fixes: #14983, #16561