Help/release/dev/link-option-PIE.rst
@@ -1,0 +1,6 @@
+link-option-PIE
+---------------
+
+* Required link options to manage Position Independent Executable are now
+  added when :prop_tgt:`POSITION_INDEPENDENT_CODE` is set. These flags are
+  controlled by policy :policy:`CMP0083`.
